Bug 138279 - Unable to add a textbox to chart
Summary: Unable to add a textbox to chart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.6.0 target:7.5.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: 83159
  Show dependency treegraph
 
Reported: 2020-11-17 08:15 UTC by Justin L
Modified: 2023-05-25 09:54 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
cannotAddAnotherTextbox.ods: test with existing textbox, but can't add another anymore. (11.39 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-11-17 08:15 UTC, Justin L
Details
Call Stack VS2019 (6.09 KB, text/plain)
2020-11-17 17:03 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2020-11-17 08:15:02 UTC
Created attachment 167353 [details]
cannotAddAnotherTextbox.ods: test with existing textbox, but can't add another anymore.

I am unable to add a textbox to a chart in LO 7.1.
See the steps in bug 83159 to reproduce the problem.

I used bibisect-linux-64-7.1 which identified the bad commit as
bibisect commit 822069ef15dbc825bd920acb6a30fffe9e5e2e49

commit 6a915073f8400fd34274cf311994bbc9bf498ab6
Author: Pranam Lashkari on Tue Sep 1 19:14:37 2020 +0530
    On double click on chart select the chart backgroud
Comment 1 Regina Henschel 2020-11-17 17:03:00 UTC
Created attachment 167372 [details]
Call Stack VS2019

I have no problem with Version: 7.1.0.0.alpha1+ (x64)
Build ID: 72056f39e01e36afac36c62988331b6813c8214f
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: default; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL

But I get a crash in Version: 7.1.0.0.alpha1+ (x64)
Build ID: 746532883f95f2c93ac2f94a578d2a37efdce7ab
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: default; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: threaded

I first thought, reason might be the empty chart. But it crashes too, after I had add data to the chart object.
Comment 2 blargh 2020-11-19 10:55:21 UTC
In version 7.3.0.1 (and in some previous versions; I don't remember when it started), there seems to be no explicit way to insert a text box inside a chart. 
A workaround that I have been using is to create the textbox outside of the chart and then copy-paste it into the chart.
Comment 3 zcrhonek 2020-11-20 13:49:58 UTC
I can confirm with Version: 7.1.0.0.alpha1+
Build ID: 548d77d0c06f7088dd3eb408797aa1fc1d7eb277
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 4 Justin L 2020-11-21 08:13:15 UTC
@zcrhonek - this is not LIMITED to Linux - resetting back to All.
Comment 5 QA Administrators 2022-12-26 03:17:18 UTC Comment hidden (noise)
Comment 6 Justin L 2023-05-18 13:43:19 UTC
I assume this is probably similar to bug 155140, but in this case the "draw the textbox" select is being treated as a double-click.

I got the same bad result with SAL_USE_VCLPLUGIN=gen instdir/program/soffice. (If that works, it typically works on Windows. But perhaps it is still just a Linux thing...)

On a few occasions I was able to add a textbox. In those cases I didn't draw a textbox - I just clicked. But that doesn't always work either.
Comment 7 Justin L 2023-05-20 15:30:40 UTC
Steps to reproduce:
1.) open cannotAddAnotherTextbox.ods and double-click on the chart
2.) display the drawing toolbar - view -> toolbars -> Drawing
3.) select "Insert a textbox" and drag the textbox into existence.

Actually, the textbox IS created, it just gets hidden immediately behind the background selection.
Comment 8 Commit Notification 2023-05-24 21:30:06 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/73a82b425b4dc02ef4ad3946b71c067a6411045c

tdf#138279 Revert "On double click on chart select the chart backgroud"

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-05-25 09:54:14 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/92cae42e5d8e5565cda975bf4be543fa9dfee352

tdf#138279 Revert "On double click on chart select the chart backgroud"

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.