tdf#138279 Revert "On double click on chart select the chart backgroud"

This reverts 7.1 commit 6a915073f8400fd34274cf311994bbc9bf498ab6.

The change was simply wrong. There is NOTHING about this context
that indicates that a double-click is happening.

So whatever this patch was trying to do,
it simply was made in a completely wrong way.

So best to just revert, and put the onus back on the interested
parties to redesign a fix for their double-click issue.

Change-Id: Ia209c0552839d6cce1b348432789f0f861ac5703
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152023
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit 73a82b425b4dc02ef4ad3946b71c067a6411045c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152217
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>