chart2/source/controller/sidebar/ChartLinePanel.cxx
@@ -55,10 +55,7 @@ OUString getCID(const rtl::Reference<::chart::ChartModel>& xModel)
 
     css::uno::Any aAny = xSelectionSupplier->getSelection();
     if (!aAny.hasValue())
-    {
-        xSelectionSupplier->select(css::uno::Any(OUString("CID/Page=")));
-        aAny = xSelectionSupplier->getSelection();
-    }
+        return OUString();
 
     OUString aCID;
     aAny >>= aCID;
